styles to modules + fix handle turn on fill field

--- a/web/src/components/GameButton/GameButton.module.css
+++ b/web/src/components/GameButton/GameButton.module.css
@@ -6,3 +6,9 @@
   border: none;
   background-color: #eeeeee;
 }
+
+@media (prefers-color-scheme: dark) {
+  .game-button {
+    color: #111111;
+  }
+}
